<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/share"

        style="@style/cardViewTextView"
        android:text="@string/share"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/donate"
        style="@style/cardViewTextView"
        android:layout_below="@id/share"
        android:text="@string/donate"/>


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/about"

        style="@style/cardViewTextView"
        android:layout_below="@id/donate"
        android:text="@string/about"/>

</RelativeLayout>