<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_view"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/default_setting"
        style="@style/cardViewTextView"
        android:visibility="gone"
        android:text="@string/default_setting" />

    <RelativeLayout
        android:id="@+id/monitor_click_rl"
        android:duplicateParentState="false"
        android:visibility="gone"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/monitor_click_tv"

            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/monitor_click" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/monitor_click_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/monitor_clipboard_rl"
        android:duplicateParentState="false"
        android:visibility="gone"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/monitor_clipboard_tv"

            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/monitor_clipboard" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/monitor_clipboard_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/show_float_view_rl"
        android:duplicateParentState="false"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/show_float_view_tv"

            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/show_float_view" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/show_float_view_switch"
            style="@style/switchStyle" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/show_float_view_request"
        style="@style/cardViewTextViewInLayoutLeft"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_tiny"
        android:paddingLeft="@dimen/margin_double"
        android:text="@string/show_float_view_request" />

    <RelativeLayout
        android:id="@+id/remain_symbol_rl"
        android:duplicateParentState="false"
        android:visibility="gone"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/remain_symbol_tv"

            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/remain_symbol" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/remain_symbol_switch"
            style="@style/switchStyle" />
    </RelativeLayout>




</LinearLayout>