<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Layout_notify_msearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
	android:background="@android:color/transparent">

	<LinearLayout
		android:layout_width="match_parent"
		android:padding="8dp"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/total_switch"
			android:textSize="@dimen/text_size_tiny"
			android:text="@string/notify_total_switch_on"
			android:gravity="center"
			android:textColor="@color/primary_text"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:drawableTop="@drawable/notify_on"
			android:background="@drawable/notify_item_bg_transe"
			android:layout_height="match_parent" />


		<TextView
			android:id="@+id/monitor_click"
			android:textSize="@dimen/text_size_tiny"
			android:text="@string/notify_monitor_click_on"
			android:gravity="center"
			android:textColor="@color/primary_text"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:drawableTop="@drawable/notify_click_on"
			android:background="@drawable/notify_item_bg_transe"
			android:layout_height="match_parent" />

		<TextView
			android:id="@+id/monitor_clipboard"
			android:textSize="@dimen/text_size_tiny"
			android:text="@string/notify_monitor_clipboard_on"
			android:gravity="center"
			android:textColor="@color/primary_text"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:drawableTop="@drawable/notify_clipboard_on"
			android:background="@drawable/notify_item_bg_transe"
			android:layout_height="match_parent" />

		<TextView
			android:id="@+id/universal_copy"
			android:textSize="@dimen/text_size_tiny"
			android:text="@string/notify_copy_title"
			android:gravity="center"
			android:textColor="@color/colorPrimary"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:drawableTop="@drawable/notify_copy"
			android:background="@drawable/notify_item_bg_transe"
			android:layout_height="match_parent" />

		<TextView
			android:id="@+id/screen_cap"
			android:textSize="@dimen/text_size_tiny"
			android:text="@string/notify_srceen_cap"
			android:gravity="center"
			android:textColor="@color/colorPrimary"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:drawableTop="@drawable/notify_screen"
			android:background="@drawable/notify_item_bg_transe"
			android:layout_height="match_parent" />

	</LinearLayout>


</LinearLayout>