<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/setting_bigbang"
        android:duplicateParentState="false"
        style="@style/hintTextViewRelativeLayoutSelector">

        <com.forfan.bigbang.view.HintTextView
            android:id="@+id/show_float_view_tv"
            style="@style/hintTextViewInLayoutLeft"
            app:hint="@string/setting_bigbang_intro"
            app:msg="@string/setting_bigbang" />

    </RelativeLayout>


    <!---->
    <!--<RelativeLayout-->
        <!--android:id="@+id/white_list"-->
        <!--style="@style/cardViewRelativeLayoutSelector"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<android.support.v7.widget.AppCompatTextView-->
            <!--style="@style/cardViewTextViewInLayoutLeft"-->
            <!--android:text="@string/white_list_settings" />-->

    <!--</RelativeLayout>-->

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:background="@color/divider"
        android:layout_height="1px"/>

    <RelativeLayout
        android:id="@+id/browser_setting"
        style="@style/cardViewRelativeLayoutSelector"
        android:duplicateParentState="false">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_only_tv"
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/use_app_browser" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/browser_switch"
            style="@style/switchStyle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/float_trigger_rl"
        android:duplicateParentState="false"
        style="@style/hintTextViewRelativeLayoutSelector">

        <View
            android:layout_width="match_parent"
            android:background="@color/divider"
            android:layout_height="1px"/>

        <com.forfan.bigbang.view.HintTextView
            android:id="@+id/float_trigger_tv"
            style="@style/hintTextViewInLayoutLeft"
            app:hint="@string/float_trigger_request"
            app:msg="@string/float_trigger" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/float_trigger_switch"
            style="@style/hintTextViewswitchStyle" />
    </RelativeLayout>

</LinearLayout>