<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/cardViewRelativeLayoutSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/xposed_setting"
            android:textColor="@color/primary_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/xposed_touch_setting"
        style="@style/cardViewRelativeLayoutSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv"
            style="@style/cardViewTextView"
            android:layout_height="20dp"
            android:paddingLeft="0dp"

            android:text="@string/xposed_forcetouch"
            android:textColor="@color/primary_text" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_below="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="start"
            android:paddingRight="5dp"
            android:text="@string/xposed_forcetouch_intro"
            android:textColor="@color/secondary_text" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/divider"
        android:layout_height="1px"/>
    <RelativeLayout
        android:id="@+id/xposed_whiteList"
        style="@style/cardViewRelativeLayoutSelector"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/wite"
            style="@style/cardViewTextView"
            android:layout_height="20dp"
            android:paddingLeft="0dp"

            android:text="@string/xposed_whitelist"
            android:textColor="@color/primary_text" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_below="@+id/wite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="5dp"
            android:text="@string/xposed_whiteIntro"
            android:textColor="@color/secondary_text" />

    </RelativeLayout>

</LinearLayout>
