<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_view"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/default_setting"
        style="@style/cardViewTextView"
        android:visibility="gone"
        android:text="@string/default_setting" />

    <View
        android:layout_width="match_parent"
        android:background="@color/divider"
        android:layout_height="1px"/>

    <RelativeLayout
        android:id="@+id/total_switch_rl"
        android:duplicateParentState="false"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/total_switch_tv"
            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/total_switch" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/total_switch_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/divider"
        android:layout_height="1px"/>
    <RelativeLayout
        android:id="@+id/monitor_click_rl"
        android:duplicateParentState="false"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/monitor_click_tv"

            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/monitor_click" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/monitor_click_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/divider"
        android:layout_height="1px"/>
    <RelativeLayout
        android:id="@+id/monitor_clipboard_rl"
        android:duplicateParentState="false"
        style="@style/cardViewRelativeLayoutSelector">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/monitor_clipboard_tv"

            style="@style/cardViewTextViewInLayoutLeft"
            android:text="@string/monitor_clipboard" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/monitor_clipboard_switch"
            style="@style/switchStyle"/>
    </RelativeLayout>




</LinearLayout>